samples/_failures_safe/1761720983_f8cc12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caed2c2f.c: In function ‘main’:
./samples/SAFE/__tmp_caed2c2f.c:153:9: error: expected declaration or statement at end of input
  153 |         }
      |         ^
./samples/SAFE/__tmp_caed2c2f.c:153:9: error: expected declaration or statement at end of input
